added feature and search

--- a/additem.html
+++ b/additem.html
@@ -33,7 +33,7 @@ Visual Frameworks 1210
 		</script>
 		<header>
 			<div id="title">
-				<h1>Add Item</h1>
+				<a href="index.html"><h1>Add Item</h1></a>
 			</div>
 		</header>
 		<div id="about">WishList LayAway is an app that helps wish listers set realistic goals to actually purchase the item or 
