--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@ Visual Frameworks 1210
 		<title>WishList LayAway</title>
 		<link rel="stylesheet" type="text/css" href="css/style.css" />
 		<link rel="stylesheet" media="only screen and (max-device-width: 480px)" href="css/iphone.css" type="text/css" />
+		<script src="http://code.jquery.com/jquery-latest.js"></script>
 	</head>
 	<body>
 	
@@ -29,11 +30,9 @@ Visual Frameworks 1210
 			<h1>WishList LayAway</h1>
 		</header>
 		<div id="home-container">
-			<!-- App description-->
-			<p>WishList LayAway is an app that helps wish listers set realistic goals to actually purchase the item or 
-			items on their wish list.</p><br><br>
-			<div id="home-button">
-				<a href="additem.html"><img src="images/plus_32.png"><span><strong> Add Item</strong></a></span>
+			<a href="additem.html"><img src="images/feature.png" width="320px" height="100%"></a><br>
+			<div id=bgSearch>
+				<input type="text" id="search" name="search" placeholder="search"/>
 			</div>
 		</div>
 	</body>
