completed feature, search, and browse

--- a/additem.html
+++ b/additem.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <!--
 Christopher Rockwell
-Project: Web App Part 4
-Visual Frameworks 1210
--->
+Project 1
+MiU 1211
+ -->
 <html>
 	<head>
 	
