--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@ MiU 1211
 			</script>
 			<div id="subCat1-4"><div id="subCatsBg"><a href="404.html">0 - 25%</a></div></div>
 			<div id="subCat2-4"><div id="subCatsBg"><a href="404.html">26% - 50%</a></div></div>
-			<div id="subCat3-4"><div id="subCatsBg"><a href="404.html>51% - 75%</a></div></div>
+			<div id="subCat3-4"><div id="subCatsBg"><a href="404.html">51% - 75%</a></div></div>
 			<div id="subCat4-4"><div id="subCatsBg"><a href="404.html">76% - 99%</a></div></div>
 		</div>
 	</body>
