--- a/MiU/Week2/Rockwell_Christopher_project2/Bronze/additem.html
+++ b/MiU/Week2/Rockwell_Christopher_project2/Bronze/additem.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <!--
 Christopher Rockwell
-Project 2
+Project 2 
 MiU 1211
  -->
 <html>
@@ -22,15 +22,8 @@ MiU 1211
 		<title>WishList LayAway</title>
 		<link rel="stylesheet" type="text/css" href="css/style.css" />
 		<link rel="stylesheet" media="only screen and (max-device-width: 480px)" href="css/iphone.css" type="text/css" />
-		<script src="http://code.jquery.com/jquery-latest.js"></script>
 	</head>
 	<body>
-		<!--update the input field that shows the slider value with the current slider value-->
-		<script type="text/javascript">
-			function updateTextInput(val) {
-			document.getElementById('textInput').value=val; 
-			}
-		</script>
 		<header>
 			<div id="title">
 				<a href="index.html"><h1>Add Item</h1></a>
@@ -39,11 +32,6 @@ MiU 1211
 		<div id="about">WishList LayAway is an app that helps wish listers set realistic goals to actually purchase the item or 
 			items on their wish list.</div>
 		<a href="#" id=aboutButton>About</a>
-		<script>
-			$("#aboutButton").click(function () {
-			  $("#about").slideToggle("slow");
-			});
-		</script>
 		<div id="container">
 			<div class="button"><br>
 				<a href="#" id="displayLink" disabled="disabled">Display Data</a>
@@ -103,28 +91,10 @@ MiU 1211
 				
 			</form>
 		</div>
+		<script src="http://code.jquery.com/jquery-latest.js"></script>
+		<script src="js/extra.js" type="text/javascript"></script>
 		<script src="js/json.js" type="text/javascript"></script>
 		<script src="js/main.js" type="text/javascript"></script>
-		<script type="text/javascript">
-    var datefield=document.createElement("input")
-    datefield.setAttribute("type", "date")
-    if (datefield.type!="date"){ //if browser doesn't support input type="date", load files for jQuery UI Date Picker
-        document.write('<link href="http://code.jquery.com/ui/1.9.0/themes/base/jquery-ui.css" rel="stylesheet" type="text/css" />\n')
-        document.write('<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.4/jquery.min.js"><\/script>\n')
-        document.write('<script src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8/jquery-ui.min.js"><\/script>\n')
-    }
-</script>
- 
-<script>
-if (datefield.type!="date"){ //if browser doesn't support input type="date", initialize date picker widget:
-    jQuery(function($){ //on document.ready
-	var pickerOpts = {
-		dateFormat:"yy-mm-dd"
-    };
-        $('#pledge').datepicker(pickerOpts);
-    })
-}
-</script>
 
 	</body>
 </html>
