add updated folders and code

--- a/MiU/Week2/Rockwell_Christopher_project2/Bronze/index.html
+++ b/MiU/Week2/Rockwell_Christopher_project2/Bronze/index.html
@@ -16,6 +16,8 @@ MiU 1211
 		<meta name="robots" content="index, follow" />
 		
 		<!--Condition content for mobile browsers-->
+		<meta name="HandheldFriendly" content="True">
+		<meta name="MobileOptimized" content="320"/>
 		<meta name="viewport" content="user-scalable=no, width=device-width" />
 		
 		<!--Page Title-->
@@ -36,7 +38,7 @@ MiU 1211
 			</div>
 			
 			<div id="cat1"><div id="cat1Bg">Browse by Priority</div></div>
-			<div id="subCat1"><div id="subCatsBg"><a href="404.html">Low</a></div></div>
+			<div id="subCat1"><div id="subCatsBg"><a href="404.html" >Low</a></div></div>
 			<div id="subCat2"><div id="subCatsBg"><a href="404.html">Medium</a></div></div>
 			<div id="subCat3"><div id="subCatsBg"><a href="404.html">High</a></div></div>
 			
