--- a/Bronze/index.html
+++ b/Bronze/index.html
@@ -16,6 +16,8 @@ MiU 1211
 		<meta name="robots" content="index, follow" />
 		
 		<!--Condition content for mobile browsers-->
+		<meta name="HandheldFriendly" content="True">
+		<meta name="MobileOptimized" content="320"/>
 		<meta name="viewport" content="user-scalable=no, width=device-width" />
 		
 		<!--Page Title-->
