--- a/bronze/index.html
+++ b/bronze/index.html
@@ -22,45 +22,174 @@ MiU 1211
 		
 		<!--Page Title-->
 		<title>WishList LayAway</title>
-		<link rel="stylesheet" type="text/css" href="css/style.css" />
-		<link rel="stylesheet" media="only screen and (max-device-width: 480px)" href="css/iphone.css" type="text/css" />
+		<link rel="stylesheet" href="http://code.jquery.com/mobile/1.2.0/jquery.mobile-1.2.0.min.css" />
+		<link rel="stylesheet" type="text/css" href="css/home.css" />
+		<script src="js/libs/modernizr.custom.min.js"></script>
 	</head>
 	<body>
+		
+		<div data-role="page" id="home">
+			
+			<div data-role="header" data-position="fixed" >
+				<h1>WishList LayAway</h1>
+			</div>
+			
+			<div id="container" data-role="content" >
+				<a href="additem.html" data-ajax="false"><img src="images/feature.png" width="320px" id="head-img"></a>
+				<div style="padding: 0px 5px 2px 5px;" data-role="collapsible" data-collapsed="true" data-theme="a" data-inset="false" >
+					<h3>Browse by Priority</h3>
+					<ul style="padding: 5px;" data-role="listview" data-theme="b" data-filter="true">
+						<li><a href="404.html" data-ajax="false">Low</a></li>
+						<li><a href="404.html" data-ajax="false">Medium</a></li>
+						<li><a href="404.html" data-ajax="false">High</a></li> 
+					</ul>
+				</div>
+				<div style="padding: 2px 5px 2px 5px;"data-role="collapsible" data-collapsed="true" data-theme="b" data-inset="false" >
+					<h3>Browse by Cost</h3>
+					<ul style="padding: 5px;" data-role="listview" data-theme="a" data-filter="true">
+						<li><a href="404.html" data-ajax="false">Under $500</a></li>
+						<li><a href="404.html" data-ajax="false">$500 - $1000</a></li>
+						<li><a href="404.html" data-ajax="false">Over $1000</a></li>
+					</ul>
+				</div>
+				<div style="padding: 2px 5px 2px 5px;"data-role="collapsible" data-collapsed="true" data-theme="a" data-inset="false" >
+					<h3>Browse by Time Frame</h3>
+					<ul style="padding: 5px;" data-role="listview" data-theme="b" data-filter="true">
+						<li><a href="404.html" data-ajax="false">0-6 months</a></li>
+						<li><a href="404.html" data-ajax="false">6 months to a year</a></li>
+						<li><a href="404.html" data-ajax="false">Between 1-3 years</a></li>
+						<li><a href="404.html" data-ajax="false">More than 3 years</a></li>
+					</ul>
+				</div>
+				<div style="padding: 2px 5px 2px 5px;"data-role="collapsible" data-collapsed="true" data-theme="b" data-inset="false" >
+					<h3>Browse by Progress</h3>
+					<ul style="padding: 5px;" data-role="listview" data-theme="a" data-filter="true">
+						<li><a href="404.html" data-ajax="false">0 - 25%</a></li>
+						<li><a href="404.html" data-ajax="false">26% - 50%</a></li>
+						<li><a href="404.html" data-ajax="false">51% - 75%</a></li>
+						<li><a href="404.html" data-ajax="false">76% - 99%</a></li>
+					</ul>
+				</div>
+			</div>
+			
+			<div data-role="footer" data-position="fixed" data-id="foot">
+				<div data-role="navbar">
+					<ul>
+						<li><a href="#home" data-icon="home" data-iconpos="top"data-theme="b">Home</a></li>
+						<li><a href="#about" data-icon="info" data-iconpos="top" data-theme="a">About</a></li>
+						<li><a href="#sugg" data-icon="grid" data-iconpos="top" data-theme="a">Suggestions</a></li>
+					</ul>
+				</div><!-- /navbar -->
+			</div>
+			
+		</div>
+		
+		<div data-role="page" id="about">
+			<div data-role="header" data-position="fixed" data-theme="b">
+				<h1>About</h1>
+			</div>
+			<div data-role="content">
+				<div data-role="controlgroup">
+					<a href="http://tinyurl.com/apy82yu" data-ajax="false" data-role="button" data-theme="a">github</a>
+					<a href="../gold/index.html" data-ajax="false" data-role="button" data-theme="b">Gold</a>
+					<a href="../bronze/index.html" data-ajax="false" data-role="button" data-theme="a">Bronze</a>
+					
+					<p><img src="images/me.jpg" width="80px" height="80px;"/><br>Hello User, <br><br>My name is Chris Rockwell and I am the creator of WishList LayAway.
+					I created this app with the intention of encouraging people to pay cash to by things versus getting it on credit or financing.<br><br>
+					Hope you enjoy the app,<br><br>Chris</p>
+				</div>
+			</div>
+			<div data-role="footer" data-position="fixed" data-id="foot">
+				<div data-role="navbar">
+					<ul>
+						<li><a href="#home" data-icon="home" data-iconpos="top" data-theme="a">Home</a></li>
+						<li><a href="#about" data-icon="info" data-iconpos="top" data-theme="b">About</a></li>
+						<li><a href="#sugg" data-icon="grid" data-iconpos="top" data-theme="a">Suggestions</a></li>
+					</ul>
+				</div><!-- /navbar -->
+			</div>
+		
+		</div>
+		
+		<div data-role="page" id="sugg">
+			<div data-role="header" data-position="fixed" data-theme="b">
+				<h1>WishList Item Suggestions</h1>
+			</div>
+			<div data-role="content">
+				<h2>Great items to consider adding to your WishList</h2>
+				<div class="ui-grid-a">
+					<div class="ui-block-a">
+						<h3 style="text-align: center;">iPad 3<br><img src="images/ipad.jpg" width="100%" id="grid-img" /></h3>
+					</div>
+					<div class="ui-block-b">
+						<h3 style="text-align: center;">iPhone<br><img src="images/ipod.png" width="100%" style="border-left: 1px solid #0d726f ;" id="grid-img" /></h3>
+					</div>
+				</div><!-- /grid-b -->
+				<div class="ui-grid-a" style="margin-top: -40px;">
+					<div class="ui-block-a">
+						<h3 style="text-align: center;">Halo 4<br><img src="images/halo4.png" width="100%" height="200px" id="grid-img" /></h3>
+					</div>
+					<div class="ui-block-b">
+						<h3 style="text-align: center;">Black Ops 2<br><img src="images/call2.jpg" width="100%" height="200px" style="border-left: 1px solid #0d726f ;" id="grid-img" /></h3>
+					</div>
+				</div>
+				<div class="ui-grid-a" style="margin-top: -10px;">
+					<div class="ui-block-a">
+						<h3 style="text-align: center;">Beats by Dre<br><img src="images/beats.jpg" width="100%" height="200px" id="grid-img" /></h3>
+					</div>
+					<div class="ui-block-b">
+						<h3 style="text-align: center;">Black Ops 2<br><img src="images/imac.jpg" width="100%" height="200px" style="border-left: 1px solid #0d726f ;" id="grid-img" /></h3>
+					</div>
+				</div>
+			</div>
+			<div data-role="footer" data-position="fixed" data-id="foot">
+				<div data-role="navbar">
+					<ul>
+						<li><a href="#home" data-icon="home" data-iconpos="top" data-theme="a">Home</a></li>
+						<li><a href="#about" data-icon="info" data-iconpos="top" data-theme="a">About</a></li>
+						<li><a href="#sugg" data-icon="grid" data-iconpos="top" data-theme="b">Suggestions</a></li>
+					</ul>
+				</div><!-- /navbar -->
+			</div>
+		
+		</div>
 	
-		<header>
+<!--		<header>
 			<h1>WishList LayAway</h1>
 		</header>
 		
 		<div id="home-container">
-			<a href="additem.html"><img src="images/feature.png" width="320px" height="100%"></a><br>
+			<a href="additem.html" data-ajax="false"><img src="images/feature.png" width="320px" height="100%"></a><br>
 			<div id=bgSearch>
 				<input type="text" id="search" name="search" placeholder="search"/>
 			</div>
 			
 			<div id="cat1"><div id="cat1Bg">Browse by Priority</div></div>
-			<div id="subCat1"><div id="subCatsBg"><a href="404.html" >Low</a></div></div>
-			<div id="subCat2"><div id="subCatsBg"><a href="404.html">Medium</a></div></div>
-			<div id="subCat3"><div id="subCatsBg"><a href="404.html">High</a></div></div>
+			<div id="subCat1"><div id="subCatsBg"><a href="404.html" data-ajax="false">Low</a></div></div>
+			<div id="subCat2"><div id="subCatsBg"><a href="404.html" data-ajax="false">Medium</a></div></div>
+			<div id="subCat3"><div id="subCatsBg"><a href="404.html" data-ajax="false">High</a></div></div>
 			
 			<div id="cat2"><div id="cat2Bg">Browse by Item Cost</div></div>
-			<div id="subCat1-2"><div id="subCatsBg"><a href="404.html">Under $500</a></div></div>
-			<div id="subCat2-2"><div id="subCatsBg"><a href="404.html">$500 - $1000</a></div></div>
-			<div id="subCat3-2"><div id="subCatsBg"><a href="404.html">Over $1000</a></div></div>
+			<div id="subCat1-2"><div id="subCatsBg"><a href="404.html" data-ajax="false">Under $500</a></div></div>
+			<div id="subCat2-2"><div id="subCatsBg"><a href="404.html" data-ajax="false">$500 - $1000</a></div></div>
+			<div id="subCat3-2"><div id="subCatsBg"><a href="404.html" data-ajax="false">Over $1000</a></div></div>
 			
 			<div id="cat3"><div id="cat3Bg">Browse by Time Frame</div></div>
-			<div id="subCat1-3"><div id="subCatsBg"><a href="#">0-6 months</a></div></div>
-			<div id="subCat2-3"><div id="subCatsBg"><a href="#">6 months to a year</a></div></div>
-			<div id="subCat3-3"><div id="subCatsBg"><a href="#">Between 1-3 years</a></div></div>
-			<div id="subCat4-3"><div id="subCatsBg"><a href="#">More than 3 years</a></div></div>
+			<div id="subCat1-3"><div id="subCatsBg"><a href="404.html" data-ajax="false">0-6 months</a></div></div>
+			<div id="subCat2-3"><div id="subCatsBg"><a href="404.html" data-ajax="false">6 months to a year</a></div></div>
+			<div id="subCat3-3"><div id="subCatsBg"><a href="404.html" data-ajax="false">Between 1-3 years</a></div></div>
+			<div id="subCat4-3"><div id="subCatsBg"><a href="404.html" data-ajax="false">More than 3 years</a></div></div>
 
 			
 			<div id="cat4"><div id="cat2Bg">Browse by Progress</div></div>
-			<div id="subCat1-4"><div id="subCatsBg"><a href="404.html">0 - 25%</a></div></div>
-			<div id="subCat2-4"><div id="subCatsBg"><a href="404.html">26% - 50%</a></div></div>
-			<div id="subCat3-4"><div id="subCatsBg"><a href="404.html">51% - 75%</a></div></div>
-			<div id="subCat4-4"><div id="subCatsBg"><a href="404.html">76% - 99%</a></div></div>
-		</div>
+			<div id="subCat1-4"><div id="subCatsBg"><a href="404.html" data-ajax="false">0 - 25%</a></div></div>
+			<div id="subCat2-4"><div id="subCatsBg"><a href="404.html" data-ajax="false">26% - 50%</a></div></div>
+			<div id="subCat3-4"><div id="subCatsBg"><a href="404.html" data-ajax="false">51% - 75%</a></div></div>
+			<div id="subCat4-4"><div id="subCatsBg"><a href="404.html" data-ajax="false">76% - 99%</a></div></div>
+		</div>-->
 		
+		<script src="http://code.jquery.com/jquery-1.8.2.min.js"></script>
+		<script src="http://code.jquery.com/mobile/1.2.0/jquery.mobile-1.2.0.min.js"></script>
 		<script src="http://code.jquery.com/jquery-latest.js"></script>
 		<script src="js/extra.js" type="text/javascript"></script>
 	</body>
