--- a/bronze/index.html
+++ b/bronze/index.html
@@ -75,9 +75,9 @@ MiU 1211
 			<div data-role="footer" data-position="fixed" data-id="foot">
 				<div data-role="navbar">
 					<ul>
-						<li><a href="#home" data-icon="home" data-iconpos="top"data-theme="b">Home</a></li>
-						<li><a href="#about" data-icon="info" data-iconpos="top" data-theme="a">About</a></li>
-						<li><a href="#sugg" data-icon="grid" data-iconpos="top" data-theme="a">Suggestions</a></li>
+						<li><a href="#home" data-icon="home" data-iconpos="top"data-theme="b" data-transition="pop">Home</a></li>
+						<li><a href="#about" data-icon="info" data-iconpos="top" data-theme="a" data-transition="pop">About</a></li>
+						<li><a href="#sugg" data-icon="grid" data-iconpos="top" data-theme="a" data-transition="pop">Suggestions</a></li>
 					</ul>
 				</div><!-- /navbar -->
 			</div>
@@ -102,9 +102,9 @@ MiU 1211
 			<div data-role="footer" data-position="fixed" data-id="foot">
 				<div data-role="navbar">
 					<ul>
-						<li><a href="#home" data-icon="home" data-iconpos="top" data-theme="a">Home</a></li>
-						<li><a href="#about" data-icon="info" data-iconpos="top" data-theme="b">About</a></li>
-						<li><a href="#sugg" data-icon="grid" data-iconpos="top" data-theme="a">Suggestions</a></li>
+						<li><a href="#home" data-icon="home" data-iconpos="top" data-theme="a" data-transition="pop" data-rel="back">Home</a></li>
+						<li><a href="#about" data-icon="info" data-iconpos="top" data-theme="b" data-transition="pop">About</a></li>
+						<li><a href="#sugg" data-icon="grid" data-iconpos="top" data-theme="a" data-transition="pop">Suggestions</a></li>
 					</ul>
 				</div><!-- /navbar -->
 			</div>
@@ -145,9 +145,9 @@ MiU 1211
 			<div data-role="footer" data-position="fixed" data-id="foot">
 				<div data-role="navbar">
 					<ul>
-						<li><a href="#home" data-icon="home" data-iconpos="top" data-theme="a">Home</a></li>
-						<li><a href="#about" data-icon="info" data-iconpos="top" data-theme="a">About</a></li>
-						<li><a href="#sugg" data-icon="grid" data-iconpos="top" data-theme="b">Suggestions</a></li>
+						<li><a href="#home" data-icon="home" data-iconpos="top" data-theme="a" data-transition="pop" data-rel="back">Home</a></li>
+						<li><a href="#about" data-icon="info" data-iconpos="top" data-theme="a" data-transition="pop" data-rel="back">About</a></li>
+						<li><a href="#sugg" data-icon="grid" data-iconpos="top" data-theme="b" data-transition="pop">Suggestions</a></li>
 					</ul>
 				</div><!-- /navbar -->
 			</div>
