--- a/gold/index.html
+++ b/gold/index.html
@@ -54,10 +54,10 @@ MiU 1211
 				<div data-role="footer" data-position="fixed" data-id="foot">
 					<div data-role="navbar">
 						<ul>
-							<li><a href="#home" data-icon="home" data-iconpos="top"data-theme="b" data-transition="slidedown">Home</a></li>
-							<li><a href="#about" data-icon="info" data-iconpos="top" data-theme="a" data-transition="slidedown">About</a></li>
-							<li><a href="#sugg" data-icon="grid" data-iconpos="top" data-theme="a" data-transition="slidedown">Suggest</a></li>
-							<li><a href="#news" data-icon="info" data-iconpos="top" data-theme="a" data-transition="slidefade">News</a></li>
+							<li><a href="#home" data-icon="home" data-iconpos="top"data-theme="b" data-transition="slideup">Home</a></li>
+							<li><a href="#about" data-icon="info" data-iconpos="top" data-theme="a" data-transition="flip">About</a></li>
+							<li><a href="#sugg" data-icon="grid" data-iconpos="top" data-theme="a" data-transition="flip">Suggest</a></li>
+							<li><a href="#news" data-icon="info" data-iconpos="top" data-theme="a" data-transition="flip">News</a></li>
 						</ul>
 					</div><!-- /navbar -->
 				</div>
@@ -92,10 +92,10 @@ MiU 1211
 			<div data-role="footer" data-position="fixed" data-id="foot">
 				<div data-role="navbar">
 					<ul>
-						<li><a href="#home" data-icon="home" data-iconpos="top"data-theme="b" data-transition="slidedown">Home</a></li>
+						<li><a href="#home" data-icon="home" data-iconpos="top"data-theme="a" data-transition="slidedown">Home</a></li>
 						<li><a href="#about" data-icon="info" data-iconpos="top" data-theme="a" data-transition="slidedown">About</a></li>
 						<li><a href="#sugg" data-icon="grid" data-iconpos="top" data-theme="a" data-transition="slidedown">Suggest</a></li>
-						<li><a href="#news" data-icon="info" data-iconpos="top" data-theme="a" data-transition="slidefade">News</a></li>
+						<li><a href="#news" data-icon="info" data-iconpos="top" data-theme="a" data-transition="slidedown">News</a></li>
 					</ul>
 				</div><!-- /navbar -->
 			</div>
@@ -129,10 +129,10 @@ MiU 1211
 			<div data-role="footer" data-position="fixed" data-id="foot">
 				<div data-role="navbar">
 					<ul>
-						<li><a href="#home" data-icon="home" data-iconpos="top"data-theme="b" data-transition="slidedown">Home</a></li>
+						<li><a href="#home" data-icon="home" data-iconpos="top"data-theme="a" data-transition="slidedown">Home</a></li>
 						<li><a href="#about" data-icon="info" data-iconpos="top" data-theme="a" data-transition="slidedown">About</a></li>
 						<li><a href="#sugg" data-icon="grid" data-iconpos="top" data-theme="a" data-transition="slidedown">Suggest</a></li>
-						<li><a href="#news" data-icon="info" data-iconpos="top" data-theme="a" data-transition="slidefade">News</a></li>
+						<li><a href="#news" data-icon="info" data-iconpos="top" data-theme="a" data-transition="slidedown">News</a></li>
 					</ul>
 				</div><!-- /navbar -->
 			</div>
@@ -171,10 +171,10 @@ MiU 1211
 			<div data-role="footer" data-position="fixed" data-id="foot">
 				<div data-role="navbar">
 					<ul>
-						<li><a href="#home" data-icon="home" data-iconpos="top"data-theme="b" data-transition="slidedown">Home</a></li>
+						<li><a href="#home" data-icon="home" data-iconpos="top"data-theme="a" data-transition="slidedown">Home</a></li>
 						<li><a href="#about" data-icon="info" data-iconpos="top" data-theme="a" data-transition="slidedown">About</a></li>
 						<li><a href="#sugg" data-icon="grid" data-iconpos="top" data-theme="a" data-transition="slidedown">Suggest</a></li>
-						<li><a href="#news" data-icon="info" data-iconpos="top" data-theme="a" data-transition="slidefade">News</a></li>
+						<li><a href="#news" data-icon="info" data-iconpos="top" data-theme="a" data-transition="slidedown">News</a></li>
 					</ul>
 				</div><!-- /navbar -->
 			</div>
@@ -213,10 +213,10 @@ MiU 1211
 			<div data-role="footer" data-position="fixed" data-id="foot">
 				<div data-role="navbar">
 					<ul>
-						<li><a href="#home" data-icon="home" data-iconpos="top"data-theme="b" data-transition="slidefade">Home</a></li>
-						<li><a href="#about" data-icon="info" data-iconpos="top" data-theme="a" data-transition="slidefade">About</a></li>
-						<li><a href="#sugg" data-icon="grid" data-iconpos="top" data-theme="a" data-transition="slidefade">Suggest</a></li>
-						<li><a href="#news" data-icon="info" data-iconpos="top" data-theme="a" data-transition="slidefade">News</a></li>
+						<li><a href="#home" data-icon="home" data-iconpos="top"data-theme="a" data-transition="slidedown">Home</a></li>
+						<li><a href="#about" data-icon="info" data-iconpos="top" data-theme="a" data-transition="slidedown">About</a></li>
+						<li><a href="#sugg" data-icon="grid" data-iconpos="top" data-theme="a" data-transition="slidedown">Suggest</a></li>
+						<li><a href="#news" data-icon="info" data-iconpos="top" data-theme="a" data-transition="slidedown">News</a></li>
 					</ul>
 				</div><!-- /navbar -->
 			</div>
@@ -240,10 +240,10 @@ MiU 1211
 			<div data-role="footer" data-position="fixed" data-id="foot">
 				<div data-role="navbar">
 					<ul>
-						<li><a href="#home" data-icon="home" data-iconpos="top" data-theme="a" data-transition="slidefade">Home</a></li>
-						<li><a href="#about" data-icon="info" data-iconpos="top" data-theme="b" data-transition="slidefade">About</a></li>
-						<li><a href="#sugg" data-icon="grid" data-iconpos="top" data-theme="a" data-transition="slidefade">Suggest</a></li>
-						<li><a href="#news" data-icon="info" data-iconpos="top" data-theme="a" data-transition="slidefade">News</a></li>					
+						<li><a href="#home" data-icon="home" data-iconpos="top" data-theme="a" data-transition="flip" data-rel="back">Home</a></li>
+						<li><a href="#about" data-icon="info" data-iconpos="top" data-theme="b" data-transition="flip">About</a></li>
+						<li><a href="#sugg" data-icon="grid" data-iconpos="top" data-theme="a" data-transition="flip">Suggest</a></li>
+						<li><a href="#news" data-icon="info" data-iconpos="top" data-theme="a" data-transition="flip">News</a></li>					
 					</ul>
 				</div><!-- /navbar -->
 			</div>
@@ -284,10 +284,10 @@ MiU 1211
 			<div data-role="footer" data-position="fixed" data-id="foot">
 				<div data-role="navbar">
 					<ul>
-						<li><a href="#home" data-icon="home" data-iconpos="top" data-theme="a" data-transition="slidefade">Home</a></li>
-						<li><a href="#about" data-icon="info" data-iconpos="top" data-theme="a" data-transition="slidefade">About</a></li>
-						<li><a href="#sugg" data-icon="grid" data-iconpos="top" data-theme="b" data-transition="slidefade">Suggest</a></li>
-						<li><a href="#news" data-icon="info" data-iconpos="top" data-theme="a" data-transition="slidefade">News</a></li>					
+						<li><a href="#home" data-icon="home" data-iconpos="top" data-theme="a" data-transition="flip" data-rel="back">Home</a></li>
+						<li><a href="#about" data-icon="info" data-iconpos="top" data-theme="a" data-transition="flip" data-rel="back">About</a></li>
+						<li><a href="#sugg" data-icon="grid" data-iconpos="top" data-theme="b" data-transition="flip">Suggest</a></li>
+						<li><a href="#news" data-icon="info" data-iconpos="top" data-theme="a" data-transition="flip">News</a></li>					
 					</ul>
 				</div><!-- /navbar -->
 			</div>
@@ -323,10 +323,10 @@ MiU 1211
 				<div data-role="footer" data-position="fixed" data-id="foot">
 					<div data-role="navbar">
 						<ul>
-							<li><a href="#home" data-icon="home" data-iconpos="top" data-theme="a" data-transition="slidefade">Home</a></li>
-							<li><a href="#about" data-icon="info" data-iconpos="top" data-theme="a" data-transition="slidefade">About</a></li>
-							<li><a href="#sugg" data-icon="grid" data-iconpos="top" data-theme="a" data-transition="slidefade">Suggest</a></li>
-							<li><a href="#news" data-icon="info" data-iconpos="top" data-theme="b" data-transition="slidefade">News</a></li>
+							<li><a href="#home" data-icon="home" data-iconpos="top" data-theme="a" data-transition="flip" data-rel="back">Home</a></li>
+							<li><a href="#about" data-icon="info" data-iconpos="top" data-theme="a" data-transition="flip" data-rel="back">About</a></li>
+							<li><a href="#sugg" data-icon="grid" data-iconpos="top" data-theme="a" data-transition="flip" data-rel="back">Suggest</a></li>
+							<li><a href="#news" data-icon="info" data-iconpos="top" data-theme="b" data-transition="flip">News</a></li>
 						</ul>
 					</div><!-- /navbar -->
 				</div>
