Fix page transitions

--- a/MiU/Week2/Rockwell_Christopher_project2/Gold/index.html
+++ b/MiU/Week2/Rockwell_Christopher_project2/Gold/index.html
@@ -55,9 +55,9 @@ MiU 1211
 					<div data-role="navbar">
 						<ul>
 							<li><a href="#home" data-icon="home" data-iconpos="top"data-theme="b" data-transition="slideup">Home</a></li>
-							<li><a href="#about" data-icon="info" data-iconpos="top" data-theme="a" data-transition="flip">About</a></li>
-							<li><a href="#sugg" data-icon="grid" data-iconpos="top" data-theme="a" data-transition="flip">Suggest</a></li>
-							<li><a href="#news" data-icon="info" data-iconpos="top" data-theme="a" data-transition="flip">News</a></li>
+							<li><a href="#about" data-icon="info" data-iconpos="top" data-theme="a" data-transition="turn">About</a></li>
+							<li><a href="#sugg" data-icon="grid" data-iconpos="top" data-theme="a" data-transition="turn">Suggest</a></li>
+							<li><a href="#news" data-icon="info" data-iconpos="top" data-theme="a" data-transition="turn">News</a></li>
 						</ul>
 					</div><!-- /navbar -->
 				</div>
@@ -240,10 +240,10 @@ MiU 1211
 			<div data-role="footer" data-position="fixed" data-id="foot">
 				<div data-role="navbar">
 					<ul>
-						<li><a href="#home" data-icon="home" data-iconpos="top" data-theme="a" data-transition="flip" data-rel="back">Home</a></li>
-						<li><a href="#about" data-icon="info" data-iconpos="top" data-theme="b" data-transition="flip">About</a></li>
-						<li><a href="#sugg" data-icon="grid" data-iconpos="top" data-theme="a" data-transition="flip">Suggest</a></li>
-						<li><a href="#news" data-icon="info" data-iconpos="top" data-theme="a" data-transition="flip">News</a></li>					
+						<li><a href="#home" data-icon="home" data-iconpos="top" data-theme="a" data-transition="slide">Home</a></li>
+						<li><a href="#about" data-icon="info" data-iconpos="top" data-theme="b" data-transition="turn">About</a></li>
+						<li><a href="#sugg" data-icon="grid" data-iconpos="top" data-theme="a" data-transition="turn">Suggest</a></li>
+						<li><a href="#news" data-icon="info" data-iconpos="top" data-theme="a" data-transition="turn">News</a></li>					
 					</ul>
 				</div><!-- /navbar -->
 			</div>
@@ -284,10 +284,10 @@ MiU 1211
 			<div data-role="footer" data-position="fixed" data-id="foot">
 				<div data-role="navbar">
 					<ul>
-						<li><a href="#home" data-icon="home" data-iconpos="top" data-theme="a" data-transition="flip" data-rel="back">Home</a></li>
-						<li><a href="#about" data-icon="info" data-iconpos="top" data-theme="a" data-transition="flip" data-rel="back">About</a></li>
-						<li><a href="#sugg" data-icon="grid" data-iconpos="top" data-theme="b" data-transition="flip">Suggest</a></li>
-						<li><a href="#news" data-icon="info" data-iconpos="top" data-theme="a" data-transition="flip">News</a></li>					
+						<li><a href="#home" data-icon="home" data-iconpos="top" data-theme="a" data-transition="slide">Home</a></li>
+						<li><a href="#about" data-icon="info" data-iconpos="top" data-theme="a" data-transition="slide" >About</a></li>
+						<li><a href="#sugg" data-icon="grid" data-iconpos="top" data-theme="b" data-transition="turn">Suggest</a></li>
+						<li><a href="#news" data-icon="info" data-iconpos="top" data-theme="a" data-transition="turn">News</a></li>					
 					</ul>
 				</div><!-- /navbar -->
 			</div>
@@ -323,10 +323,10 @@ MiU 1211
 				<div data-role="footer" data-position="fixed" data-id="foot">
 					<div data-role="navbar">
 						<ul>
-							<li><a href="#home" data-icon="home" data-iconpos="top" data-theme="a" data-transition="flip" data-rel="back">Home</a></li>
-							<li><a href="#about" data-icon="info" data-iconpos="top" data-theme="a" data-transition="flip" data-rel="back">About</a></li>
-							<li><a href="#sugg" data-icon="grid" data-iconpos="top" data-theme="a" data-transition="flip" data-rel="back">Suggest</a></li>
-							<li><a href="#news" data-icon="info" data-iconpos="top" data-theme="b" data-transition="flip">News</a></li>
+							<li><a href="#home" data-icon="home" data-iconpos="top" data-theme="a" data-transition="slide">Home</a></li>
+							<li><a href="#about" data-icon="info" data-iconpos="top" data-theme="a" data-transition="slide">About</a></li>
+							<li><a href="#sugg" data-icon="grid" data-iconpos="top" data-theme="a" data-transition="slide" >Suggest</a></li>
+							<li><a href="#news" data-icon="info" data-iconpos="top" data-theme="b" data-transition="turn">News</a></li>
 						</ul>
 					</div><!-- /navbar -->
 				</div>
